--- a/actions/configOrder.json
+++ b/actions/configOrder.json
@@ -63,6 +63,7 @@
         "DhcpRelayGlobal",
         "DhcpRelayIntf",
         "VxlanInstance",
-        "VxlanVtepInstance"
+        "VxlanVtepInstance",
+        "DpiRules"
     ]
 }
